--- a/Codes/README
+++ b/Codes/README
@@ -2,4 +2,4 @@ Github is unable to render our code with all the graphs and plots.
 We have separated our codes into 2:
 
 1. codewithoutoutput.ipynb: clean code without any outputs
-2. code.ipynb: code that displays all graphs and plots (download to view)
+2. SC1015_mini_project.ipynb: code that displays all graphs and plots (download to view)
