--- a/Codes/README
+++ b/Codes/README
@@ -1,5 +1,5 @@
 Github is unable to render our code with all the graphs and plots. 
 We have separated our codes into 2:
 
-1. codewithoutoutput.ipynb: clean code without any outputs
+1. SC1015_Mini_Project_no_output.ipynb: clean code without any outputs
 2. SC1015_Mini_Project.ipynb: code that displays all graphs and plots (download to view)
