--- a/Codes/README
+++ b/Codes/README
@@ -3,3 +3,5 @@ We have separated our codes into 2:
 
 1. SC1015_Mini_Project_no_output.ipynb: clean code without any outputs
 2. SC1015_Mini_Project.ipynb: code that displays all graphs and plots (download to view)
+
+Alternatively, you may view SC1015_Mini_Project.ipynb on nbviewer.org instead of downloading :")
